--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     namespace 'com.android.UniPlugin'
     defaultConfig {
-        applicationId "com.android.UniPlugin"
+        applicationId "uni.UNIE739C0F"
         minSdkVersion 21
         targetSdkVersion 32 //建议此属性值设为21 io.dcloud.PandoraEntry 作为apk入口时   必须设置 targetSDKVersion>=21 沉浸式才生效
 
@@ -21,10 +21,10 @@ android {
 
     signingConfigs {
         config {
-            keyAlias 'key0'
-            keyPassword '123456'
-            storeFile file('test.jks')
-            storePassword '123456'
+            keyAlias '1'
+            keyPassword '111111'
+            storeFile file('player.jks')
+            storePassword '111111'
             v1SigningEnabled true
             v2SigningEnabled true
         }
@@ -82,6 +82,9 @@ dependencies {
     // 添加uni-app插件
     implementation project(':uniplugin_module')
     implementation project(':uniplugin_component')
+
+    implementation project(':finance_elec')
+
 
     // uts依赖
     implementation "com.squareup.okhttp3:okhttp:3.12.12"
