--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.3.2'
@@ -18,9 +20,12 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
+
         google()
-        jcenter()
         maven { url = uri("https://jitpack.io") }
+        mavenCentral()
+
     }
 }
 
