--- a/mf-palyer/build.gradle
+++ b/mf-palyer/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     // Android工具集合
     implementation 'com.blankj:utilcodex:1.31.1'
 
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
+
 }
